Refactor memory allocation functions and improve initialization logging

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
-        "vbe_driver.h": "c"
+        "*.dbclient-js": "javascript",
+        "stdlib.h": "c"
     }
 }
