--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,3 +8,7 @@ target = "x86_64-unknown-none_mos.json"
 
 [target.'cfg(target_os = "none")']
 runner = "bootimage runner"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
