--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,19 @@
 name = "MOS"
 version = "0.1.0"
 edition = "2024"
+test = true
 
 [dependencies]
 bootloader = "0.9"
+lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+spin = "0.10.0"
+volatile = "0.2.6"
+uart_16550 = "0.2.0"
+
+
+[package.metadata.bootimage]
+test-args = [
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
+]
+test-success-exit-code = 33         # (0x10 << 1) | 1
+test-timeout = 300
