--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
 spin = "0.10.0"
 volatile = "0.2.6"
 uart_16550 = "0.2.0"
+x86_64 = "0.14.2"
+pic8259 = "0.10.1"
 
 
 [package.metadata.bootimage]
