--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ volatile = "0.2.6"
 uart_16550 = "0.2.0"
 x86_64 = "0.14.2"
 pic8259 = "0.10.1"
-
+linked_list_allocator = "0.9.0"
 
 [package.metadata.bootimage]
 test-args = [
